option('development', type: 'boolean', value: false, description: 'If this is a development build')
option('buffer-backend', type : 'combo', choices : ['mmap', 'malloc'], value : 'mmap')
option('introspection', type: 'feature', value: 'auto', description: 'Generate gir data (requires gobject-introspection)')
option('gtk_doc', type: 'boolean', value: false, description: 'Build reference manual (requires gtk-doc)')
